testsuite/escript/func/func2.err
func2.src:6:2: error: missing 'endfunction' at 'print'