testsuite/escript/func/func2.src


function foo1()
    var a := 6;

	print "foo1";
endfunction

foo1();